--- a/index.html
+++ b/index.html
@@ -29,21 +29,23 @@
 		</script>
 	</head>
 	<body>
-		<header></header>
-		<section id="certify">
-			<div class="swiper-container">
-				<ul class="swiper-wrapper">
-					<li class="swiper-slide"><img src="images/1.png"/></li>
-					<li class="swiper-slide"><img src="images/2.png"/></li>
-					<li class="swiper-slide"><img src="images/3.png"/></li>
-					<li class="swiper-slide"><img src="images/4.png"/></li>
-					<li class="swiper-slide"><img src="images/5.png"/></li>
-					<li class="swiper-slide"><img src="images/6.png"/></li>
-					<li class="swiper-slide"><img src="images/7.png"/></li>
+		<div id="wrap">
+			<header></header>
+			<section id="certify">
+				<div class="swiper-container">
+					<ul class="swiper-wrapper">
+						<li class="swiper-slide"><img src="images/1.png"/></li>
+						<li class="swiper-slide"><img src="images/2.png"/></li>
+						<li class="swiper-slide"><img src="images/3.png"/></li>
+						<li class="swiper-slide"><img src="images/4.png"/></li>
+						<li class="swiper-slide"><img src="images/5.png"/></li>
+						<li class="swiper-slide"><img src="images/6.png"/></li>
+						<li class="swiper-slide"><img src="images/7.png"/></li>
+					</ul>
 				</div>
-			</div>
-		</section>
-		<footer></footer>
+			</section>
+			<footer></footer>
+		</div>
 		<script>
 			var mySwiper = new Swiper('#certify .swiper-container', {
 				watchSlidesProgress: true,
